# josh_project2_frontend

./: .gitignore  acr-funcs.yaml  app.py  pyproject.toml  requirements.txt
.github/workflows/: main_NeighborlyFronEnd.yml  main_joshproject2frontend.yml
NeighborlyFrontEnd/: pyproject.toml  settings.py
